--- a/src/styles/radio.css
+++ b/src/styles/radio.css
@@ -1,31 +1,63 @@
-
-html{
-    box-sizing: border-box;
-    position:relative;
-}
-
 .App{
-    padding:3rem;
+    padding:3em;
 }
 
-.regions{
-    box-sizing: border-box;
-  /*   height: 200px; */
-}
-
-
-.option{
-    display:flex;
-    font-size: 1rem;
-    padding:10px;
-
-}
-
-.option input{
-    height: 15px;
-    width: 15px;
+ /* w3 tutorial for the buttons style */
+.option {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
     cursor: pointer;
-}
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .option input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .myStyle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  .option:hover input ~ .myStyle {
+    background-color: #ccc;
+  }
+  
+  .option input:checked ~ .myStyle {
+    background-color: #2196F3;
+  }
+  
+  .myStyle:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  .option input:checked ~ .myStyle:after {
+    display: block;
+  }
+  
+  .option .myStyle:after {
+       top: 9px;
+      left: 9px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: white;
+  }
 
 
 
